IndexBuildsCoordinator may deadlock while cleaning up multiple index builds on the same collection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-07-29
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the IndexBuildsCoordinator is enabled on a primary that subsequently steps down while multiple index builds are running concurrently on the same collection, it may be possible for these index builds to deadlock during the clean up phase initiated in IndexBuildsManager::tearDownIndexBuild().

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: