SERVER-42383 fix deadlock in IndexBuildsCoordinator during cleanup